--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+    <head>
+        <title> Магазин атб</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
     <body>
         <header>
             <img class="f" src="https://supplier.atbmarket.com/custom/themes/default/images/company_logo.png?v=7p-eCkidgF-pLB2eFUysMw" height="150px"/>
