--- a/index.html
+++ b/index.html
@@ -1,76 +1,128 @@
-<html>
-    <head>
-        <title> Магазин атб</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <header>
-            <img class="f" src="https://supplier.atbmarket.com/custom/themes/default/images/company_logo.png?v=7p-eCkidgF-pLB2eFUysMw" height="150px"/>
-            <nav>
-                <a href="#catalog">Каталог</a>
+<!DOCTYPE html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Патісерія Smakotela</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+        nav ul li {
+            display: inline;
+            margin: 0 15px;
+        }
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+        }
+        .menu {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+        }
+        .menu-item {
+            background-color: white;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            padding: 15px;
+            margin: 10px;
+            width: 30%;
+            text-align: center;
+        }
+                .menu-ite {
+                background-color: white;
+                border: 1px solid #ddd;
+                border-radius: 5px;
+                padding: 15px;
+                margin: 10px;
+                width: 30%;
+                text-align: center;
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Патісерія Smakotela</h1>
+        <nav>
+            <ul>
+                <li><a href="#menu">Меню</a></li>
+                <li><a href="#about">Про нас</a></li>
+                <li><a href="#contact">Контакты</a></li>
+            </ul>
+        </nav>
+    </header>
 
-                <a href="#principles">Наші принципи</a>
+    <div class="container">
+        <section id="menu">
+            <h2>Меню</h2>
+            <div class="menu">
+                <div class="menu-item">
+                    <h3>COFFE</h3>
+                    <p> Американо - 40 грн.</p>
+                    <p> Бамбл - 100 грн.</p>
+                    <p> Допіо - 55 грн.</p>
+                    <p> Еспресо - 35 грн.</p>
+                    <p> Еспресо макіято - 40 грн.</p>
+                    <p> Еспресо Тонік - 81 грн.</p>
+                    <p> Кортадо - 45 грн.</p>
+                    <p> Капучино - 50 грн.</p>
+                    <p> Лате- 55 грн.</p>
+                    <p> Лунго - 39 грн.</p>
+                    <p> Рістерто - 39 грн.</p>
+                    <p> Флет Вайт - 68 грн.</p>
+                </div>
+                <div class="menu-ite">
+                    <h3>NON-COFFE</h3>
+                    <p> Авторський лимонад - 90 грн.</p>
+                    <p> Апельсиновий фреш - 125 грн.</p>
+                    <p> Какао - 65 грн.</p>
+                    <p> Чай "Hello Tea"- 70 грн.</p>
+                </div>
+            </div>
+        </section>
 
-                <a href="#ddd">Відгуки</a>
-                <a href="#sfe">Інформація про нас</a>
-            </nav>
-        </header>
-        <main>
-            <h1>Магазин Товарів</h1>
-            <img class="head_img" src="" width="400px"/>
-            <h2 id="catalog">Каталог Товарів</h2>
-            <section class="catalog">
-                <article class="product">
-                    <img src="/uploads/2021/02/cat-2170495_1920_0_1612513261.jpg" height="100px"/><br/>
-                    <a href="">Корма для собак</a>
-                </article>
-                <article class="product">
-                    <img src="https://zheltoemore.com.ua/image/cache/catalog/image/cache/catalog/Picture/Drinks/juice-650x650.webp" height="150px"/><br/>
-                    <a href="">Соки</a>
-                </article>
-                <article class="product">
-                    <img src="https://varus.ua/img/product/1140/1140/127801" height="100px"/><br/>
-                    <a href="">Лимон</a>
-                </article>
-                <article class="product">
-                    <img src="https://molli.com.ua/image/cache/catalog/easyphoto/1503/vodnyy-blaster-na-akkumulyatore-elektricheskiy-vodyanoy-pistolet-s-avtomaticheskim-nasosom-dlya-detey-i-vzroslyh-superior-zelenyy_11-1000x1000.png" height="100px"/><br/>
-                    <a href="">Водний Пістолет</a>
-                </article>
-                <article class="product">
-                    <img src="https://fruit-boutique.com.ua/content/images/17/627x323l80bl0/banan-32719932455155.jpg" height="70px"/><br/>
-                    <a href="">Банани</a>
-                </article>
-                <article class="product">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSpUAJ0X72-SHf8B94OyyLW8FXbc-FcGB2djA&usqp=CAU" width="70px"/><br/>
-                    <a href="">Книжка Гарри Потера</a>
-                </article>
-            </section>
-            <h2 id="principles">Наші принципи</h2>
-            <section class="principles">
-                <article class="principle">
-                    <img src="/uploads/2021/02/chemistry-2389151_640_0_1612518875.png" width="50px" height="50px"/>
-                    <p>Товари завжди свіжі</p>
-                </article>
-                <article class="principle">
-                    <img src="/uploads/2021/02/truck-1918551_640_0_1612518875.png" width="80px" height="50px"/>
-                    <p>доставка у будь-які точки міста</p>
-                </article>
-                <article class="principle">
-                    <img src="/uploads/2021/02/icons-1831923_640_0_1612518875.png" width="50px" height="50px"/>
-                    <p>безкоштовна доставка</p>
-                </article>
-            </section>
-            <section class="question-answer">
-                <article class="qua-item">
-                    <b id="ddd">Відгуки</b>
-                  <h2 class="sd">Наташа:</h2>
-                    <h3>Найкращий магазин в який я ходила</h3>
-                </article>
-            </section>
-        </main>
-        <footer id="sfe">
-            <p>Ел. пошта: blum.binance@gmail.com</p>
-            <p>Телефон:+380(66)629 5 666</p>
-        </footer>
-    </body>
+        <section id="about">
+            <h2>Про нас</h2>
+            <p>Ми невелике кафе, яке пропонує уютну атмосферу та вкусні напої та інше. Ми готуєму свіжу продукцію  </p>
+        </section>
+
+        <section id="contact">
+            <h2>Контакти</h2>
+            <p>Адрес: вул. Набережна незалежгості 9/4 .Ужгород</p>
+            <p>Телефон: +380 </p>
+            <p>Email: info@vkusnoe.ru</p>
+        </section>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 Патісерія Smakotela. Всі права захищені.</p>
+    </footer>
+</body>
 </html>
